test/Fail/Issue4927-2.agda
_ : Set → Set₁
_ = λ (@flat A : Set) → Set
